#
# ggcov - A GTK frontend for exploring gcov coverage data
# Copyright (c) 2005 Greg Banks <gnb@alphalink.com.au>
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
# 
# $Id: Makefile.am,v 1.8 2006-06-26 02:57:34 gnb Exp $
#

SUBDIRS=	test001 test002 test004 test005 \
		test006 test007 test008 test009 \
		test010 test011 test013 test014 \
		test015 test016 test018

EXTRA_DIST=	common.sh platform.sh runtest

TESTS=		   runtest
TESTS_ENVIRONMENT= sh
