#
# ggcov - A GTK frontend for exploring gcov coverage data
# Copyright (c) 2001-2003 Greg Banks <gnb@alphalink.com.au>
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
# 
# $Id: Makefile.am,v 1.10 2004-10-24 06:48:57 gnb Exp $
#

desktopdir=	$(datadir)/gnome/apps/Development
pixmapsdir=	$(datadir)/pixmaps

EXTRA_DIST=	ggcov.glade ggcov-glade2.glade \
		ggcov64.png ggcov32.png ggcov32.xpm \
		ggcov.desktop

pixmaps_DATA=	ggcov64.png
pkgdata_DATA=	@GGCOV_GLADE_FILE@ ggcov64.png
desktop_DATA=	ggcov.desktop
